Fix broken images

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ input {
 }
 
 .header {
-  background-image: url(../images/header.jpg);
+  background-image: url(./images/header.jpg);
   padding: 30px;
   text-align: center;
 }
